IRAI-44-Readme-Generator: Added readme,license and some autoload changes.

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     },
     "authors": [
         {
-            "name": "arunsahijpal",
+            "name": "Arun Sahijpal",
             "email": "arunsahijpal111@gmail.com"
         },
         {
