--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,11 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "symfony/console": "^7.2",
-        "symfony/yaml": "^7.2",
+        "php": "^8.1",
+        "symfony/console": "^6.3 || ^7.0",
+        "symfony/yaml": "^6.3 || ^7.0",
+        "symfony/http-client": "^6.3 || ^7.0",
         "openai-php/client": "^0.10.3",
-        "symfony/http-client": "^7.2",
         "nyholm/psr7": "^1.8",
         "guzzlehttp/guzzle": "^7.9",
         "vlucas/phpdotenv": "^5.6"
