IRAI-44: Corrected files.

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,5 @@
 # API configuration for AI summarization (Groq or OpenAI-compatible service)
-
-# Replace with your actual API key from GroqCloud
+# Supported: groq, openai
+AI_PROVIDER=groq
+# Replace with your actual API key from GroqCloud or OpenAI
 API_KEY=your-api-key-goes-here
-
-# Base URL for the AI API (GroqCloud or similar)
-BASE_URI=https://api.groq.com/
-
-# Endpoint path for chat completion
-CHAT_ENDPOINT=openai/v1/chat/completions
-
-# Model to be used (e.g., Groq's LLaMA 3)
-MODEL=llama3-8b-8192
