Added model in env with mapping.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 # API configuration for AI summarization (Groq or OpenAI-compatible service)
+
 # Supported: groq, openai
-AI_PROVIDER=groq
-# Replace with your actual API key from GroqCloud or OpenAI
-API_KEY=your-api-key-goes-here
+AI_PROVIDER=
+
+# Write API key
+API_KEY=
+
+# Write your model
+AI_MODEL=
